# osiris

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile copy  Dockerfile.alpine  LICENSE  README.md  THIRD-PARTY-LICENCES  build.rs  docker-compose.yaml  main.py  perf.data  perf.data.old  rustfmt.toml  todo.md
.cargo/: config.toml
examples/: echo.rs
hooks/: install.sh  pre-commit
osiris-macros/: Cargo.toml
osiris-macros/src/: lib.rs
src/: __priv.rs  _priv.rs  driver.rs  fs.rs  hasher.rs  lib.rs  net.rs  runtime.rs  task.rs  type_assertions.rs
src/_priv/: join.rs  join_waker.rs  main.rs  mod.rs  try_join.rs
src/buf/: io_buf.rs  io_buf_mut.rs  mod.rs  slice.rs
src/driver/: io_uring.rs  pollster.rs
src/fs/: dir.rs  file.rs  metadata.rs  mod.rs  open_options.rs  read.rs  symlink.rs
src/io/: mod.rs
src/io_uring/: bindings.rs  config.rs  cq.rs  mod.rs  sq.rs  syscall.rs
src/macros/: mod.rs  pin.rs
src/net/: getaddrinfo.rs  mod.rs  pipe.rs  socket.rs  tcp.rs  tcp_listener.rs  tcp_stream.rs  tcpsocket.rs  to_socket_addr.rs  udp.rs  utils.rs
src/net/dns/: mod.rs  unix.rs
src/net/dns/unix/: lookup_name.rs  lookup_serv.rs  mod.rs  resolv.rs  search.rs
src/reactor/: event.rs  mod.rs  op.rs  reactor.rs  utils.rs
src/reactor/iouring/: event.rs  mod.rs  op.rs
src/reactor/kqueue/: event.rs  mod.rs  op.rs
src/reactor/nonblocking/: mod.rs  op.rs  submit.rs
src/reactor/poll/: event.rs  mod.rs  op.rs
src/runtime/: config.rs  driver.rs  executor.rs  globals.rs  mod.rs  thread_pool.rs  unique_queue.rs  waker.rs
src/runtime/driver/: linux.rs  non_linux.rs
src/runtime/thread_pool/: handle.rs  mod.rs  stats.rs  work.rs  worker_thread.rs
src/shared_driver/: driver.rs  event.rs  io_uring.rs  mod.rs  pollster.rs
src/sync/: mod.rs  mpmc.rs  mutex.rs
src/task/: completion.rs  fns.rs  join_handle.rs  meta.rs  mod.rs  raw_task.rs  shared_task.rs  spawn_blocking.rs  task_repr.rs  waker.rs  yield_now.rs
src/time/: mod.rs  timeout.rs
src/utils/: buf.rs  futures.rs  mod.rs  queue.rs  stat.rs
tests/: connect.rs  dns.rs  edge_cases.rs  executor.rs  fs.rs  io_buf.rs  join.rs  macros.rs  multithread_wakups.rs  polling_mode.rs  smoke_test.rs  spawn_blocking.rs  test_macro.rs  time.rs  timer.rs  tokio_comparison.rs  try_join.rs
tests/fs_test_files/: .gitignore
