[workspace]
members = [".", "osiris-macros"]

[package]
name = "osiris"
version = "0.1.0"
edition = "2021"

[features]
default-features = ["io_uring"]
epoll=[]
io_uring = ["io-uring"]
unstable = ["io-uring/unstable"]
unsafe_completion = []
net = []
macros = ["osiris-macros"]


[profile.release]
debug = true

[dependencies]
dns-protocol = "0.1.1"
fastrand = "1.9.0"
futures-core = "0.3.28"
futures-lite = { version = "1.13.0", default-features = false }
libc = "0.2.138"
memchr = "2.5.0"
osiris-macros = { version = "0.1", path = "./osiris-macros", optional = true }
pin-project-lite = "0.2.9"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.5.6", optional = true }


[dev-dependencies]
dotenv = "0.15.0"
futures = "0.3.28"
osiris = { path = ".", features = ["unstable", "macros", "net", "epoll", "io_uring"] }

[build-dependencies]
cfg_aliases = "0.1.0"
